--- a/apps/nrwl-angular-poc/src/app/app.component.scss
+++ b/apps/nrwl-angular-poc/src/app/app.component.scss
@@ -131,3 +131,8 @@ summary {
   width: 16px;
   margin-right: 4px;
 }
+
+.example-button-row button,
+.example-button-row a {
+  margin-right: 8px;
+}
