--- a/apps/nrwl-angular-poc/src/styles.scss
+++ b/apps/nrwl-angular-poc/src/styles.scss
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+body, html {
+    margin: 0;
+    padding: 0;
+    font-family: 'Arial';
+}
+
+.left, .right {
+    float:left;
+    width: calc(50% - 6em);
+    padding: 3em;
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
